--- a/index.html
+++ b/index.html
@@ -118,11 +118,24 @@
     </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"></a> <script src="https://kit.fontawesome.com/b8dbacb959.js" crossorigin="anonymous"></script> <i class="fa-brands fa-facebook"></i>   
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"></a> <i class="fa-brands fa-instagram"></i>    
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"></a> <i class="fa-brands fa-twitter"></i>   
+            </li>
+            <li>
+                <a href="https://YouTube.com" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)"></a> <i class="fa-brands fa-youtube"></i>
+            </li>
+        </ul>
     </footer>
 
     <!-- font awesome script-->
-    <script src="https://kit.fontawesome.com/b8dbacb959.js" crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
