--- a/index.html
+++ b/index.html
@@ -118,18 +118,18 @@
     </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"></a> <script src="https://kit.fontawesome.com/b8dbacb959.js" crossorigin="anonymous"></script> <i class="fa-brands fa-facebook"></i>   
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fa-brands fa-facebook"></i> </a> 
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"></a> <i class="fa-brands fa-instagram"></i>    
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>    
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"></a> <i class="fa-brands fa-twitter"></i>   
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a> 
             </li>
             <li>
-                <a href="https://YouTube.com" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)"></a> <i class="fa-brands fa-youtube"></i>
+                <a href="https://YouTube.com" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a> 
             </li>
         </ul>
     </footer>
