add gallery images and masonry styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#">Sign up</a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -120,7 +120,7 @@
     <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"> <i class="fa-brands fa-facebook"></i> </a> 
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a> 
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>    
@@ -135,6 +135,7 @@
     </footer>
 
     <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/b8dbacb959.js" crossorigin="anonymous"></script>
     
 </body>
 
